[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "code_genie"
authors = [
    {name = "Aarshay Jain", email = "aarshay.jain@columbia.edu"},
]
description = "Copilot to supercharge your notebooks"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["copilot", "jupyter"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pydantic>=1.10,<2",
    "pandas>=1.3,<2",
    "numpy>=1.20,<2",
    "matplotlib>=3.4,<4",
    "seaborn>=0.11,<1"
]
dynamic = ["version"]

[project.optional-dependencies]
build = [
    "coverage>=5,<6",
    "pytest>=6,<=7",
    "pytest-cov>=2.5,<3",
    "tox>=3.24,<4",
    "isort>=5.10,<6",
    "python-dotenv",
    "pip-tools",
    "bumpversion"
]
docs = [
    "sphinx==5.3.0",
    "autodocsumm",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx_gallery"
]
notebook = [
    "jupyterlab>=3.1,<4",
    "ipykernel>=6.0,<7",
]

[project.urls]
Documentation = "https://TBD"
Source = "https://github.com/thismlguy/code-genie"

[tool.flit.sdist]
include = ["LICENSE"]
